2005-07-12  Emmanuel Dreyfus  <manu@netbsd.org>

	* src/racoon/samples/roadwarrior/client/{pahse1-up.sh|phase1-down.sh}:
	  Add comments for using the scripts without NAT-T
	* src/racoon/pfkey.c: Set IKE ports to 0 in the SA when NAT-T is not
	  used. 
	* src/racoon/{admin.c|session.c}: Don't use adminport if it is 
	  disabled.

2005-07-04  Emmanuel Dreyfus  <manu@netbsd.org>

	* src/racoon/isakmp_inf.c: safety checks on informational messages

2005-07-01  Emmanuel Dreyfus  <manu@netbsd.org>

	From Uri <urimobile@optonline.net>
	* src/racoon/oakley.c: pkcs7 support

2005-06-22  Emmanuel Dreyfus  <manu@netbsd.org>

	From Ludo Stellingwerff <ludo@protactive.nl>:
	* src/racoon/isakmp.c: NAT-T fix: We treat null ports in SPD as 
	  wildcard so that IKE ports are used instead. This was done on
	  phase 2 initiation from the kernel (acquire message), but not 
	  on phase 2 initiation retries when the phase 2 had been queued
	  for a phase 1.

2005-06-07  Emmanuel Dreyfus  <manu@netbsd.org>

	From Larry Baird <lab@gta.com>
	* src/racoon/isakmp.c: consume NAT keepalive data  already seen
	  with MSG_PEEK 

2005-06-06  Emmanuel Dreyfus  <manu@netbsd.org>

	* src/racoon/isakmp_quick.c: endianness bug fix

	From Frederic Senault  <fred@lacave.net>
	* src/racoon/privsep.c: fix Xauth login with PAM authentication

2005-05-31  Aidas Kasparas  <a.kasparas@gmc.lt>

	* src/racoon/ipsec_doi.c: Inserted missing 0th element of
	  rm_idtype2doi array. Bug #1199700 fix.

2005-05-20  Emmanuel Dreyfus  <manu@netbsd.org>

	From Mike Robinson <sundialservices@users.sourceforge.net>
	* src/racoon/isakmp_xauth.c: really delete phase 1 on Xauth failure

	* src/libipsec/pfkey.c src/racoon/ipsec_doi.c: Fix NAT-T + IPcomp

	From hgates <hgates.lists@gmail.com>
	* src/racoon/proposal.c: fix SPI size test for IPcomp

	From Larry Baird <lab@gta.com>
	* src/racoon/{handler.c|ipsec_doi.c|remoteconf.h|remoteconf.c}: When 
	  altering lifetime, duplicate the proposal instead of modifying 